<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.DishPageActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/dish_page_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:background="@color/light_blue_primary_night"
        app:title="О блюде"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <ImageView
        android:id="@+id/dish_page_image_view"

        android:layout_width="0dp"
        android:layout_height="250dp"
        android:scaleType="centerCrop"
        android:src="@drawable/pepperoni"

        android:transitionName="dishImageTransition"

        app:layout_constraintTop_toBottomOf="@id/dish_page_toolbar"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <TextView
        android:id="@+id/dish_page_name_text_view"

        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:gravity="center"
        android:text="@string/pepperoni_name"
        android:fontFamily="@font/inter"
        android:textStyle="bold"
        android:textSize="25sp"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dish_page_image_view"/>

    <TextView
        android:id="@+id/dish_page_description_text_view"

        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"

        android:gravity="center"
        android:fontFamily="@font/inter"
        android:textSize="16sp"
        android:text="@string/pepperoni_description"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dish_page_name_text_view"/>

    <TextView
        android:id="@+id/dish_page_price_text_view"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="20dp"

        android:gravity="center"
        android:fontFamily="@font/inter_bold"
        android:textSize="30sp"
        android:text="@string/dishPriceString"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/dish_page_linear_layout"/>

    <TextView
        android:id="@+id/dish_page_rub_text_view"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:gravity="center"
        android:fontFamily="@font/inter"
        android:textStyle="bold"
        android:textSize="30sp"
        android:text="₽"

        app:layout_constraintTop_toTopOf="@id/dish_page_price_text_view"
        app:layout_constraintBottom_toBottomOf="@id/dish_page_price_text_view"
        app:layout_constraintLeft_toRightOf="@id/dish_page_price_text_view"/>

    <LinearLayout
        android:id="@+id/dish_page_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:layout_margin="10dp"

        app:layout_constraintTop_toBottomOf="@id/dish_page_description_text_view"
        app:layout_constraintBottom_toTopOf="@id/dish_page_add_to_cart_button"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <Button
            android:id="@+id/dish_page_minus_button"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="5dp"

            android:gravity="center"
            android:background="@drawable/button_round_bg"
            android:text="-"
            android:fontFamily="@font/inter"
            android:textStyle="bold"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/dish_page_quantity_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:gravity="center"
            android:text="1"
            android:fontFamily="@font/inter"
            android:textSize="30sp"
            android:textStyle="bold"/>

        <Button
            android:id="@+id/dish_page_plus_button"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="5dp"

            android:gravity="center"
            android:background="@drawable/button_round_bg"
            android:text="+"
            android:fontFamily="@font/inter"
            android:textStyle="bold"
            android:textSize="20sp"/>

    </LinearLayout>

    <Button
        android:id="@+id/dish_page_add_to_cart_button"

        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/button_round_bg"

        android:text="Добавить к заказу"
        android:fontFamily="@font/inter"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textAllCaps="false"

        android:onClick="addToCart"

        app:layout_constraintWidth_percent="0.8"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>



</androidx.constraintlayout.widget.ConstraintLayout>