...
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"/>

        <ImageButton
            android:id="@+id/home_open_cart_activity_image_button"
            android:src="@drawable/cart_icon_png"
            android:background="@color/light_blue_primary_night"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
...
